--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-regex": "^6.0.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
